# twitter-scylladb-rust-university

./: Cargo.toml  Makefile  README.md  current_schema.json
docker/: multi-docker-compose.yml  single-docker-compose.yml
lessons/step1/src/: connection.rs  main.rs
lessons/step3/src/: main.rs
lessons/step5/: Cargo.toml
lessons/step5/src/: connection.rs
lessons/step6/: Cargo.toml
lessons/step6/src/repositories/: timeline_service.rs
lessons/step7/: Cargo.toml
lessons/step7/src/: main.rs
step1/: Cargo.toml
step1/src/: connection.rs  main.rs  utils.rs
step1/src/models/: timeline.rs  tweet.rs
step1/src/repositories/: mod.rs  timeline_service.rs  tweet_service.rs
step1/src/workers/: ingestion.rs  metrics.rs
step2/: Cargo.toml
step2/src/: connection.rs  main.rs  utils.rs
step2/src/models/: mod.rs  tweet.rs
step2/src/repositories/: timeline_service.rs  tweet_service.rs
step2/src/workers/: ingestion.rs  metrics.rs
step3/: Cargo.toml
step3/src/: connection.rs  main.rs  utils.rs
step3/src/repositories/: mod.rs  timeline_service.rs  tweet_service.rs
step4/: Cargo.toml
step4/src/: connection.rs  main.rs
step4/src/repositories/: mod.rs  timeline_service.rs  tweet_service.rs
step4/src/workers/: ingestion.rs  metrics.rs
step5/: Cargo.toml
step5/src/: connection.rs  main.rs
step5/src/models/: liked_timeline.rs  mod.rs
step5/src/repositories/: timeline_service.rs  tweet_service.rs
step5/src/workers/: ingestion.rs  metrics.rs
step6/src/: connection.rs  logger.rs  main.rs
step7/: Cargo.toml
step7/src/: connection.rs  main.rs
(+17 files in other folders)
