[package]
name = "rust-scylladb-university-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
dotenvy = "0.15.7"
scylla = "0.12.0"
charybdis = "0.5.3"
fake = { version = "2.9.2", features = ["derive"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "1.0.58"
uuid = { version = "1.8.0", features = ["v1"] }
rand = "0.8.5"
anyhow = "1.0.82"
