[package]
name = "step-6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
dotenvy = "0.15.7"
scylla = "0.13.0"
charybdis = "0.7.0"
fake = { version = "2.9.2", features = ["derive"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "1.0.58"
uuid = { version = "1.8.0", features = ["v1"] }
rand = "0.8.5"
anyerror = "0.1.12"
anyhow = "1.0.82"
log = "0.4.21"
hdrhistogram = "7.5.4"
humantime = "2.1.0"
pretty_env_logger = "0.5.0"
